--- a/package.json
+++ b/package.json
@@ -4,15 +4,30 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
-    "db:generate": "prisma migrate dev",
-    "db:migrate": "prisma migrate deploy",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+    "prebuild": "prisma generate && prisma migrate deploy",
+    "build:1-next": "cross-env NODE_ENV=production next build",
+    "build:2-server": "tsc --project tsconfig.server.json",
+    "build": "run-s build:*",
+    "dev:wss": "cross-env PORT=3001 tsx watch src/server/api/wsServer.ts --tsconfig tsconfig.server.json",
+    "dev:next": "next dev --hostname 0.0.0.0",
+    "dev": "pnpm migrate-dev && run-p dev:*",
+    "db-up": "docker-compose up -d",
+    "db-seed": "prisma db seed",
+    "db-migrate-dev": "prisma migrate dev",
+    "db-nuke": "docker-compose down --volumes --remove-orphans",
+    "dx": "run-s db-up db-migrate-dev db-seed dev",
+    "dev-nuke": "rm -rf prisma/*.db**",
+    "generate": "prisma generate",
+    "migrate-dev": "prisma migrate dev",
+    "migrate": "prisma migrate deploy",
+    "start": "cross-env NODE_ENV=production node dist/server/api/wsServer.js",
+    "studio": "prisma studio",
+    "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
+    "lint-fix": "pnpm lint --fix",
+    "test-dev": "cross-env APP_ENV=test start-server-and-test dev 3000 test",
+    "test-start": "cross-env APP_ENV=test WS_URL=ws://localhost:3000 start-server-and-test start 3000 test",
+    "test": "playwright test",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -22,11 +37,24 @@
     "@trpc/next": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "cheerio": "^1.0.0",
+    "cross-env": "^7.0.3",
     "geist": "^1.3.0",
+    "hls.js": "^1.5.15",
     "next": "^14.2.4",
+    "niconico-api": "^1.0.4",
+    "niconico-search-api": "^1.0.1",
+    "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hls-player": "^3.0.7",
+    "react-lite-youtube-embed": "^2.4.0",
+    "react-youtube": "^10.1.0",
+    "run-p": "^0.0.0",
     "superjson": "^2.2.1",
+    "tsx": "^4.0.0",
+    "ws": "^8.18.0",
+    "youtube-search-api": "^1.2.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
@@ -34,6 +62,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
