--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "run-s build:*",
     "dev:wss": "cross-env PORT=3001 tsx watch src/server/api/wsServer.ts --tsconfig tsconfig.server.json",
     "dev:next": "next dev --hostname 0.0.0.0",
-    "dev": "pnpm migrate-dev && run-p dev:*",
+    "dev": "run-p dev:*",
     "db-up": "docker-compose up -d",
     "db-seed": "prisma db seed",
     "db-migrate-dev": "prisma migrate dev",
@@ -30,7 +30,14 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
     "@trpc/client": "^11.0.0-rc.446",
@@ -38,27 +45,37 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "geist": "^1.3.0",
     "hls.js": "^1.5.15",
+    "input-otp": "^1.2.4",
+    "langdetect": "^0.2.1",
+    "lucide-react": "^0.438.0",
     "next": "^14.2.4",
-    "niconico-api": "^1.0.4",
-    "niconico-search-api": "^1.0.1",
+    "next-themes": "^0.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hls-player": "^3.0.7",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-lite-youtube-embed": "^2.4.0",
     "react-youtube": "^10.1.0",
-    "run-p": "^0.0.0",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "trpc-panel": "^1.3.4",
     "tsx": "^4.0.0",
     "ws": "^8.18.0",
     "youtube-search-api": "^1.2.2",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/langdetect": "^0.2.2",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
