style(client): refactor codes

--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "type": "module",
   "scripts": {
     "prebuild": "prisma generate && prisma migrate deploy",
-    "build:1-next": "cross-env NODE_ENV=production next build",
-    "build:2-server": "tsc --project tsconfig.server.json",
-    "build": "run-s build:*",
+    "build:next": "cross-env NODE_ENV=production next build",
+    "build:server": "tsc --project tsconfig.server.json",
+    "build": "rm -rf dist && run-s build:*",
     "dev:wss": "cross-env PORT=3001 tsx watch src/server/api/wsServer.ts --tsconfig tsconfig.server.json",
     "dev:next": "next dev --hostname 0.0.0.0",
     "dev": "run-p dev:*",
-    "db-up": "docker-compose up -d",
-    "db-seed": "prisma db seed",
-    "db-migrate-dev": "prisma migrate dev",
+    "db:up": "docker-compose up -d",
+    "db:seed": "prisma db seed",
+    "db:migrate:dev": "prisma migrate dev",
     "db-nuke": "docker-compose down --volumes --remove-orphans",
     "dx": "run-s db-up db-migrate-dev db-seed dev",
-    "dev-nuke": "rm -rf prisma/*.db**",
+    "dev:nuke": "rm -rf prisma/*.db**",
     "generate": "prisma generate",
-    "migrate-dev": "prisma migrate dev",
+    "migrate:dev": "prisma migrate dev",
     "migrate": "prisma migrate deploy",
-    "start": "cross-env NODE_ENV=production node dist/server/api/wsServer.js",
+    "start": "cross-env NODE_ENV=production next start",
     "studio": "prisma studio",
     "lint": "eslint --cache --ext \".js,.ts,.tsx\" src",
-    "lint-fix": "pnpm lint --fix",
-    "test-dev": "cross-env APP_ENV=test start-server-and-test dev 3000 test",
-    "test-start": "cross-env APP_ENV=test WS_URL=ws://localhost:3000 start-server-and-test start 3000 test",
+    "lint:fix": "pnpm lint --fix",
+    "test:dev": "cross-env APP_ENV=test start-server-and-test dev 3000 test",
+    "test:start": "cross-env APP_ENV=test WS_URL=ws://localhost:3000 start-server-and-test start 3000 test",
     "test": "playwright test",
     "postinstall": "prisma generate"
   },
