--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "db:migrate:dev": "prisma migrate dev",
     "db-nuke": "docker-compose down --volumes --remove-orphans",
     "dx": "run-s db-up db-migrate-dev db-seed dev",
-    "dev:nuke": "rm -rf prisma/*.db**",
+    "db:nuke": "rm -rf prisma/*.db**",
     "generate": "prisma generate",
     "migrate:dev": "prisma migrate dev",
     "migrate": "prisma migrate deploy",
@@ -34,6 +34,7 @@
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -50,6 +51,7 @@
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "cross-env": "^7.0.3",
     "geist": "^1.3.0",
     "hls.js": "^1.5.15",
